...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Cancel"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "New household"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add to inventory"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Delete"
          }
        },
...
      }
    },
    "household.new.create" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "household.new.done" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "household.new.name" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "household.new.ownerName" : {
      "extractionState" : "manual",
      "localizations" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Eggs"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Fridge"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pantry"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nothing in stock yet"
          }
        },
...
      }
    },
    "inventory.more" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "member.color.mocha" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "member.editSelf" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "member.setup.later" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "member.setup.name" : {
      "extractionState" : "manual",
      "localizations" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Remove from Favorites"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add to List"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Favorite"
          }
        },
...
      }
    },
    "stock.edit" : {
      "extractionState" : "manual",
      "localizations" : {
...
      }
    },
    "stock.transfer" : {
      "extractionState" : "manual",
      "localizations" : {
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "No store"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Other store…"
          }
        },
...
          "stringUnit" : {
            "state" : "translated",
            "value" : "Places at this address"
          }
        },
...
